<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CampusPo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tab_home_page">主页</string>
    <string name="tab_special_page">精选</string>
    <string name="tab_message_page">消息</string>
    <string name="tab_personal_page">个人</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码 ?</string>
    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="refresh">刷新</string>
    <string name="join">加入</string>
    <string name="quit">退出</string>
    <string name="community_trends">社团动态</string>
    <string name="lost_and_found">失物招领</string>
    <string name="delegation">委托招募</string>
    <string name="campus_news">校园新闻</string>
    <string name="campus_market">二手市场</string>
    <string name="umberlla">雨伞</string>
    <string name="poster_title">活动标题</string>
    <string name="poster_description">活动说明</string>
    <string name="wanted">招募</string>
    <string name="wanted_num">招募人数</string>
    <string name="no_limit">无限制</string>
    <string name="publish">发布</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="save_as_draft_or_not">是否保存为草稿</string>
    <string name="clear_cache">清除缓存</string>
    <string name="clear_cache_after_exit">清除缓存在每次软件退出后</string>
    <string name="delegation_title">委托标题</string>
    <string name="delegation_description">委托内容</string>
    <string name="reward">报酬</string>
    <string name="deadline">截止至：%1$d年%2$d月%3$d日</string>
    <string name="date_of_big_poster">%s.PO</string>
    <string name="community_broad">社团宣传栏</string>
    <string name="NULL"></string>
    
    <string name="publish">发布</string>
    
    <string name="ptr_pull_to_refresh">Pull to refresh</string>
    <string name="ptr_release_to_refresh">Release to refresh</string>
    <string name="ptr_refreshing">Refreshing</string>
    <string name="ptr_last_updated">Updated: %0$s</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    
    <string name="error_unknown_host">未知服务器</string>
    <string name="error_timeout">连接超时，请稍后重试</string>
    <string name="error_network_unwork">无法连接服务器，请检查网络连接</string>
</resources>
