<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical" >

    <EditText
        android:id="@id/et_delegation_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/delegation_title"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@id/et_delegation_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top"
        android:hint="@string/delegation_description"
        android:ems="10" />

    <EditText
        android:id="@+id/et_reward"
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reward"
        android:ems="10" />

    <TextView
        android:id="@id/tv_deadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textAppearance="?android:textAppearanceMedium"
        android:text="@string/deadline" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm" />

        <Button
            android:id="@id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>
